--- a/package.json
+++ b/package.json
@@ -2,12 +2,21 @@
   "name": "javascript-development-environment",
   "version": "1.0.0",
   "description": "JavaScript development environment Pluralsight course by Cory House",
-  "scripts": {},
+  "scripts": {
+    "prestart": "node buildScripts/startMessage.js",
+    "start": "npm-run-all --parallel security-check opn:src share",
+    "opn:src" : "node buildScripts/srcServer.js",
+    "security-check": "nsp check",
+    "share" : "lt --port 3001"
+  },
   "author": "Cory House",
   "license": "MIT",
   "dependencies": {
-    "whatwg-fetch": "1.0.0"
+    "micro": "latest",
+    "whatwg-fetch": "1.0.0"    
   },
+
+  
   "devDependencies": {
     "babel-cli": "6.16.0",
     "babel-core": "6.17.0",
@@ -34,7 +43,7 @@
     "mocha": "3.1.2",
     "nock": "8.1.0",
     "npm-run-all": "3.1.1",
-    "nsp": "2.6.2",
+    "nsp": "latest",
     "numeral": "1.5.3",
     "open": "0.0.5",
     "rimraf": "2.5.4",
