--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
-    "prestart": "node buildScripts/startMessage.js",
+    "prestart": "babel-node buildScripts/startMessage.js",
     "start": "npm-run-all --parallel security-check opn:src share",
-    "opn:src" : "node buildScripts/srcServer.js",
+    "opn:src" : "babel-node buildScripts/srcServer.js",
     "security-check": "nsp check",
     "share" : "lt --port 3001"
   },
